--- a/ST10256859_PROG7311_POE/Views/Home/SignUp.cshtml
+++ b/ST10256859_PROG7311_POE/Views/Home/SignUp.cshtml
@@ -9,31 +9,36 @@
         <input asp-for="FirstName" class="form-control" />
         <span asp-validation-for="FirstName" class="text-danger"></span>
     </div>
-
     <div class="form-group">
         <label asp-for="LastName"></label>
         <input asp-for="LastName" class="form-control" />
         <span asp-validation-for="LastName" class="text-danger"></span>
     </div>
-
     <div class="form-group">
         <label asp-for="Email"></label>
         <input asp-for="Email" class="form-control" />
         <span asp-validation-for="Email" class="text-danger"></span>
     </div>
-
+    <div class="form-group">
+        <label asp-for="PhoneNumber"></label>
+        <input asp-for="PhoneNumber" class="form-control" />
+        <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Address"></label>
+        <input asp-for="Address" class="form-control" />
+        <span asp-validation-for="Address" class="text-danger"></span>
+    </div>
     <div class="form-group">
         <label asp-for="Password"></label>
         <input asp-for="Password" class="form-control" />
         <span asp-validation-for="Password" class="text-danger"></span>
     </div>
-
     <div class="form-group">
         <label asp-for="ConfirmPassword"></label>
         <input asp-for="ConfirmPassword" class="form-control" />
         <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
     </div>
-
     <div class="form-group">
         <label asp-for="Role"></label>
         <select asp-for="Role" class="form-control">
@@ -41,7 +46,6 @@
             <option value="Employee">Employee</option>
         </select>
     </div>
-
     <button type="submit" class="btn btn-primary">Sign Up</button>
 </form>
 
