Add role-based access and navigation updates
- Implemented `IsEmployee()` and `EmployeeProfile()` in `EmployeeController` for employee role checks and profile access.
- Added `IsFarmer()` method in `FarmerController` and updated `FarmerProfile` and `ProductAdd` methods for farmer role checks.
- Enhanced `_Layout.cshtml` to display navigation links based on user roles, improving user experience for logged-in users.

--- a/ST10256859_PROG7311_POE/Views/Shared/_Layout.cshtml
+++ b/ST10256859_PROG7311_POE/Views/Shared/_Layout.cshtml
@@ -18,25 +18,40 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                    @{
+                        var userRole = Context.Session.GetString("UserRole");
+                    }
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Login">Login</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="SignUp">Sign Up</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Farmer" asp-action="ProductAdd">Add a Product</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Farmer" asp-action="FarmerProfile">Profile</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="FarmerProducts">Farmer Products</a>
-                        </li>
+                        @if (string.IsNullOrEmpty(userRole))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Login">Login</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="SignUp">Sign Up</a>
+                            </li>
+                        }
+                        else if (userRole == "Farmer")
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Farmer" asp-action="ProductAdd">Add a Product</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Farmer" asp-action="FarmerProfile">Profile</a>
+                            </li>
+                        }
+                        else if (userRole == "Employee")
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="EmployeeProfile">Employee Profile</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="FarmerProducts">Farmer Products</a>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
