--- a/ST10256859_PROG7311_POE/Views/Employee/EmployeeProfile.cshtml
+++ b/ST10256859_PROG7311_POE/Views/Employee/EmployeeProfile.cshtml
@@ -1,5 +1,23 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model ST10256859_PROG7311_POE.Models.Employee
+
 @{
+    ViewData["Title"] = "Employee Profile";
 }
+
+<h2>Employee Profile</h2>
+
+<div>
+    <h4>Personal Details</h4>
+    <dl class="row">
+        <dt class="col-sm-2">First Name</dt>
+        <dd class="col-sm-10">@Model.FirstName</dd>
+        <dt class="col-sm-2">Last Name</dt>
+        <dd class="col-sm-10">@Model.LastName</dd>
+        <dt class="col-sm-2">Email</dt>
+        <dd class="col-sm-10">@Model.Email</dd>
+        <dt class="col-sm-2">Phone Number</dt>
+        <dd class="col-sm-10">@Model.PhoneNumber</dd>
+        <dt class="col-sm-2">Address</dt>
+        <dd class="col-sm-10">@Model.Address</dd>
+    </dl>
+</div>
