--- a/ST10256859_PROG7311_POE/Views/Employee/FarmerAdd.cshtml
+++ b/ST10256859_PROG7311_POE/Views/Employee/FarmerAdd.cshtml
@@ -1,9 +1,7 @@
-﻿@using ST10256859_PROG7311_POE.ViewModels
-@model SignUpViewModel
+﻿@model ST10256859_PROG7311_POE.ViewModels.FarmerAddViewModel
 
-<h2>Sign Up</h2>
-
-<form asp-action="SignUp" method="post">
+<h2>Add Farmer</h2>
+<form asp-action="FarmerAdd" method="post">
     <div class="form-group">
         <label asp-for="FirstName"></label>
         <input asp-for="FirstName" class="form-control" />
@@ -34,14 +32,5 @@
         <input asp-for="Password" class="form-control" />
         <span asp-validation-for="Password" class="text-danger"></span>
     </div>
-    <div class="form-group">
-        <label asp-for="ConfirmPassword"></label>
-        <input asp-for="ConfirmPassword" class="form-control" />
-        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-    </div>
-    <button type="submit" class="btn btn-primary">Sign Up</button>
+    <button type="submit" class="btn btn-success">Add Farmer</button>
 </form>
-
-<div>
-    <p>Already have an account? <a href="@Url.Action("Login", "Home")">Login</a></p>
-</div>
