--- a/ST10256859_PROG7311_POE/wwwroot/css/site.css
+++ b/ST10256859_PROG7311_POE/wwwroot/css/site.css
@@ -1,22 +1,70 @@
-html {
-  font-size: 14px;
-}
-
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
-
-html {
-  position: relative;
-  min-height: 100%;
-}
-
 body {
-  margin-bottom: 60px;
+    background-color: #fdf8e8;
 }
+
+.home-logo-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    min-height: 74vh; /* This pushes the footer down */
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.home-logo-img {
+    max-width: 220px;
+    height: auto;
+    margin-right: 40px;
+    margin-bottom: 0;
+}
+
+.home-title-group {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    max-width: 600px;
+}
+
+.home-logo-title {
+    font-size: 3rem;
+    font-weight: bold;
+    color: #196422;
+    white-space: nowrap;
+    display: block;
+}
+
+.home-welcome-message {
+    color: #582F0E;
+    font-size: 1.3rem;
+    font-weight: 500;
+    margin-top: 20px;
+    margin-bottom: 40px;
+    max-width: 100%;
+    text-align: left;
+    width: 100%;
+    word-break: break-word;
+}
+
+.navbar {
+    background-color: #18681f !important;
+}
+
+    .navbar .nav-link,
+    .navbar .navbar-brand {
+        color: #fdf8e8 !important;
+    }
+
+.custom-footer {
+    background-color: #18681f;
+    color: #fdf8e8;
+    padding: 18px 0;
+    position: relative;
+    width: 100%;
+    margin-top: 40px;
+}
+
+    .custom-footer a {
+        color: #582F0E;
+        text-decoration: underline;
+    }
