--- a/ST10256859_PROG7311_POE/Views/Home/Login.cshtml
+++ b/ST10256859_PROG7311_POE/Views/Home/Login.cshtml
@@ -1,27 +1,29 @@
 ﻿@using ST10256859_PROG7311_POE.ViewModels
 @model LoginViewModel
 
-<h2>Login</h2>
+<div class="home-logo-container">
+    <img src="~/images/image1.png" alt="Agri-Energy Connect Logo" class="home-logo-img" />
 
-@* Display model-level errors *@
-@Html.ValidationSummary(false, "", new { @class = "text-danger" })
-
-<form asp-action="Login" method="post">
-    <div class="form-group">
-        <label asp-for="Email"></label>
-        <input asp-for="Email" class="form-control" />
-        <span asp-validation-for="Email" class="text-danger"></span>
+    <div class="home-title-group">
+        <div class="home-welcome-message login-title">
+            Login to your account
+        </div>
+        @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+        <form asp-action="Login" method="post" class="auth-form">
+            <div class="form-group">
+                <label asp-for="Email"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Password"></label>
+                <input asp-for="Password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <button type="submit" class="btn home-btn-login">Login</button>
+        </form>
+        <div class="mt-3">
+            <p>Don't have an account? <a href="@Url.Action("SignUp", "Home")" class="home-link">Sign up</a></p>
+        </div>
     </div>
-
-    <div class="form-group">
-        <label asp-for="Password"></label>
-        <input asp-for="Password" class="form-control" />
-        <span asp-validation-for="Password" class="text-danger"></span>
-    </div>
-
-    <button type="submit" class="btn btn-primary">Login</button>
-</form>
-
-<div>
-    <p>Don't have an account? <a href="@Url.Action("SignUp", "Home")">Sign up</a></p>
 </div>
