--- a/ST10256859_PROG7311_POE/wwwroot/css/site.css
+++ b/ST10256859_PROG7311_POE/wwwroot/css/site.css
@@ -60,8 +60,9 @@ body {
 .navbar .navbar-brand,
 .navbar .btn-link.nav-link {
     color: #fdf8e8 !important;
-    font-size: 1.0rem; 
+    font-size: 1.0rem;
     letter-spacing: 0.5px;
+    padding: 0.5rem 1rem;
 }
 
     .navbar .nav-link:hover,
@@ -69,6 +70,10 @@ body {
     .navbar .btn-link.nav-link:hover {
         color: #81aa29 !important;
     }
+
+.navbar .logout-btn {
+    margin-right: 16px;
+}
 
 
 .custom-footer {
